# NanoXGen

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: ci.yml  cuda.yml
LICENSES/: SeExpr-BSD-3-Clause.txt
cmake/: FindLuisaComputeNext.cmake  FindMaya.cmake  FindXGen.cmake  NanoXGenConfig.cmake.in
docs/: classic-native.md  data-layout.md  luisa-compute.md  renderer-integration.md  sdk-setup.md  xgen-format.md  xgen-production-assets.md  xgen-research.md
include/nanoxgen/: asset.h  blob_storage.h  context.h  cuda.h  curve_cache.h  curve_payload.h  device_contract.h  device_view.h  generate.h  hip.h  seexpr_noise_table.h  task_executor.h  types.h  xgen.h  xgen_classic.h  xgen_classic_alembic.h  xgen_classic_clump.h  xgen_classic_collection.h  xgen_classic_ptex.h  xgen_classic_roots.h  xgen_classic_runtime.h  xgen_expression.h  xgen_package.h  xgen_ptex.h  xgen_samples.h  xpd.h
include/nanoxgen/detail/: decimal_parse.h
include/nanoxgen/luisa/: generate.h  xgen_classic_collection.h  xgen_classic_runtime.h  xgen_expression.h
patches/: luisa-compute-next-fallback-unaligned-byte-buffer.patch
scripts/: build_luisa_compute_next.sh  check_xgen_sdk.sh  fetch_maya_devkit.sh  gdb_capture_xgen_clump_noise.py  run_fast_math_comparison.sh  run_maya_xgen_cache_test.sh  run_rabbit_luisa_benchmark.sh  run_xgen_benchmark.sh  run_xgen_bridge_profile.sh  run_xgen_classic_collection_benchmark.py  run_xgen_classic_typed_test.sh  run_xgen_modifier_study.sh  run_xgen_real_tests.sh
src/: asset.cpp  context.cpp  curve_cache.cpp  curve_payload.cpp  task_executor.cpp  xgen.cpp  xgen_classic.cpp  xgen_classic_alembic.cpp  xgen_classic_clump.cpp  xgen_classic_collection.cpp  xgen_classic_path.h  xgen_classic_ptex.cpp  xgen_classic_roots.cpp  xgen_classic_runtime.cpp  xgen_expression.cpp  xgen_package.cpp  xgen_ptex.cpp  xgen_samples.cpp  xpd.cpp
src/cuda/: generate.cu
src/hip/: generate.hip
src/luisa/: generate.cpp  packed_io.h  xgen_classic_collection.cpp  xgen_classic_runtime.cpp  xgen_expression.cpp
tests/: classic_alembic_test.cpp  classic_root_test.cpp  classic_test.cpp  cuda_test.cpp  expression_test.cpp  hip_test.cpp  luisa_test.cpp  package_test.cpp  ptex_test.cpp  test_main.cpp
tests/cmake-consumer/: CMakeLists.txt  main.cpp
tests/maya/: benchmark_igs.py  create_igs_fixture.py  inspect_igs_modifier_schema.py  profile_igs_bridge.py  test_igs_cache_bridge.py  verify_igs_summaries.py  verify_modifier_study.py  verify_xgen_noise_model.py
tools/: benchmark.cpp  cache_benchmark.cpp  cuda_benchmark.cpp  curve_cache_inspect.cpp  demo.cpp  hip_benchmark.cpp  hip_cache_benchmark.cpp  luisa_classic_benchmark.cpp  maya_xgen_cache.cpp  maya_xgen_cache_validation.h  maya_xgen_profile.cpp  precision.cpp  xgen_benchmark.cpp  xgen_cache.cpp  xgen_classic_asset.cpp  xgen_classic_cold_benchmark.cpp  xgen_classic_inspect.cpp  xgen_classic_luisa_benchmark.cpp  xgen_classic_motion.cpp  xgen_classic_typed.cpp  xgen_classic_typed_validation.h  xgen_curve_oracle.cpp  xgen_expression_oracle.cpp  xgen_inspect.cpp  xgen_modifier_probe.cpp  xgen_package.cpp  xgen_parity.cpp  xgen_patch_oracle.cpp  xgen_probe.cpp  xgen_process.cpp  xgen_ptex_inspect.cpp  xgen_read_benchmark.cpp  xgen_sample_oracle.cpp  xgen_to_nxc.cpp  xpd_inspect.cpp  xpd_oracle.cpp
